--- a/gameSettings.json
+++ b/gameSettings.json
@@ -1,10 +1,13 @@
 {
-    "GridSize": {
+    "Grid": {
         "Size": 10
     },
 
     "Ships": {
-        "Battleship": 1,
-        "Destroyer": 2
+        "ShipsConfig":
+        {
+            "Battleship": 1,
+            "Destroyer": 2
+        }
     }
 }
